.412
  - Minor decruft and "still works" release
  - Don't warn about memcached if memcachedHosts is undef in the rc
  - Redefines.pm removed; has not been needed for a long time

.411
  - "__init" Class callback was mis-documented as "init"
  - "__baseAsserts" should no longer be used; all asserted keys in a
    superclass are inherited now.
  - Array assertions -- "elementIndex" column removed from element
    tables. Instead, the "name" column is used for this purpose.
    Developers with Array assertions in their older DBI-backed
    classes will need to manually rename the element table's
    "elementIndex" column to "name".
  - "name" is now optional by default

.410
  - Detect 'long double' support and warn about JSON::Syck bug (54725)
  - Clean up test script

.409
  - Add debugging + search tests to Ladybug.t
  - Consolidate backing store type enums into StorageType.pm

.408
  - Misc minor bug and doc fixes

.407
  - Add full-text search methods (thx DBIx::TextIndex)
  - Much cleaner interface to ExtID - Persistent classes now assert
    themselves as ExtID. ExtID->assert only needs to be used
    directly in the case of self-referential tables.
  - Documented new features
  - List collectors revisited
  - JSON may be used as a flatfile type, see Persistence docs
  - Some methods are going away. These will warn for now:
    - $class->__useYaml depracated. Use $class->__useFlatfile instead.
    - $class->__dbiType depracated. Use $class->__useDbi instead.
    - $array->collect depracated. Use $array->each instead.
    - $array->collectWithIndex depracated. Use $array->each instead.
    - $array->eachWithIndex depracated. Use $array->each instead.
    - $array->size depracated. Use $array->count instead.
    - $string->size depracated. Use $anyScalar->length instead.
  - Some methods were added:
    - $array->eachTuple is a new collector method for 2D arrays
    - $class->count returns number of rows in the backing store